@@ -9,7 +9,7 @@ Vcs-Svn: svn://svn.debian.org/d-i/trunk/packages/netcfg
 Package: netcfg
 XC-Package-Type: udeb
 Architecture: i386 sparc alpha m68k arm armel armeb powerpc mips mipsel hppa ia64 amd64 kfreebsd-i386 kfreebsd-amd64
-Depends: ${shlibs:Depends}, ${misc:Depends}, dhcp3-client-udeb (>= 3.1.0-2) [kfreebsd-i386 kfreebsd-amd64], ethernet-card-detection
+Depends: ${shlibs:Depends}, ${misc:Depends}, ${netcfg:Depends}, ethernet-card-detection
 Provides: configured-network
 XB-Installer-Menu-Item: 1800
 Description: Configure the network
