@@ -17,8 +17,18 @@ override_dh_installdebconf:
 	(echo ; po2debconf debian/netcfg-static.templates )\
 	   >> debian/netcfg/DEBIAN/templates	
 
+ARCH=$(shell dpkg-architecture -qDEB_HOST_ARCH)
+
+NETCFG_DEPENDS =
+ifeq ($(ARCH), kfreebsd-i386)
+NETCFG_DEPENDS = dhcp3-client-udeb
+endif
+ifeq ($(ARCH), kfreebsd-amd64)
+NETCFG_DEPENDS = dhcp3-client-udeb
+endif
+
 override_dh_gencontrol:
-	 dh_gencontrol -s
+	 dh_gencontrol -s -- -Vnetcfg:Depends="$(NETCFG_DEPENDS)"
 
 override_dh_builddeb:
 	 dh_builddeb -s
