@@ -31,6 +31,8 @@ netcfg (1.52) UNRELEASED; urgency=low
 
   [ Otavio Salvador ]
   * Ask for hostname when using udhcpc.
+  * Fix adding dhcp3-client-udeb dependency only for
+    kfreebsd{i386,amd64}.
 
  -- Frans Pop <fjp@debian.org>  Sun, 31 Jan 2010 00:20:23 +0100
 
